feat: профиль/галерея

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,8 @@
 .header {
   display: flex;
+  flex-direction: column;
+  justify-content: start;
   width: 100%;
-  max-width: 744px;
+  max-width: 880px;
   font-family: Inter, Arial, sans-serif;
 }
