--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,12 +1,19 @@
 .header__logo {
-  width: auto;
+  max-width: 103.74px;
   height: 24.4px;
-  margin: 28px 0 0 27px;
+  margin: 28px 0 31.6px 27px;
   padding: 0;
 }
 
 @media (min-width: 768px) {
   .header__logo {
+    max-width: 142px;
     height: 33px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .header__logo {
+    margin: 45px 0 41px;
   }
 }
