--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,9 +1,10 @@
 .profile__edit-button {
   width: 18px;
   height: 18px;
+  margin-top: 7px;
 }
 
-@media(min-width: 768px) {
+@media(min-width: 1024px) {
   .profile__edit-button {
     width: 24px;
     height: 24px;
