--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -4,13 +4,13 @@
   padding: 0;
 }
 
-@media(min-width: 1024px) {
+/* @media(min-width: 1024px) {
   .profile__info {
     margin: 0 0 16px 34px;
   }
-}
+} */
 
-@media(min-width: 1280px) {
+@media(min-width: 1024px) {
   .profile__info {
     margin: 23px 0 0 34px;
   }
