--- a/pages/index.css
+++ b/pages/index.css
@@ -16,7 +16,16 @@
 @import url(../blocks/element/element.css);
 @import url(../blocks/element/__image/element__image.css);
 @import url(../blocks/element/__like-image/element__like-image.css);
+@import url(../blocks/element/__like-image/_black/element__like-image_black.css);
 @import url(../blocks/element/__title/element__title.css);
 @import url(../blocks/element/__bottom-block/element__bottom-block.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
+@import url(../blocks/opacity-link/opacity-link.css);
+@import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/popup/__content/popup__content.css);
+@import url(../blocks/popup/__close-button/popup__close-button.css);
+@import url(../blocks/popup/__save-button/popup__save-button.css);
+@import url(../blocks/popup/__window/popup__window.css);
+@import url(../blocks/hidden/hidden.css);
