--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -7,4 +7,15 @@
   color: white;
   border: none;
   border-radius: 2px;
+  margin: 45px 0 25px 0;
+}
+
+@media(min-width: 1024px) {
+  .popup__save-button {
+    width: 358px;
+    height: 50px;
+    margin: 48px 0 37px 0;
+    font-size: 18px;
+    line-height: 21.78px;
+  }
 }
