--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -2,5 +2,13 @@
   font-size: 18px;
   line-height: 21.78px;
   font-weight: 900;
-  margin: 0;
+  margin: 25px 0 75px 0;
+}
+
+@media(min-width: 1024px) {
+  .popup__title {
+    font-size: 24px;
+    line-height: 29.05px;
+    margin: 34px 0 48px 0;
+  }
 }
