--- a/pages/index.css
+++ b/pages/index.css
@@ -28,4 +28,8 @@
 @import url(../blocks/popup/__close-button/popup__close-button.css);
 @import url(../blocks/popup/__save-button/popup__save-button.css);
 @import url(../blocks/popup/__window/popup__window.css);
+@import url(../blocks/popup/_open/popup_open.css);
+@import url(../blocks/popup/__input-name/popup__input-name.css);
+@import url(../blocks/popup/__input-about/popup__input-about.css);
+@import url(../blocks/popup/__line/popup__line.css);
 @import url(../blocks/hidden/hidden.css);
