--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -1,7 +1,7 @@
 .popup__close-button {
   position: absolute;
   right: 0px;
-  bottom: 338px;
+  top: -40px;
   cursor: pointer;
   border: none;
   background: none;
@@ -12,10 +12,10 @@
 
 @media(min-width: 768px) {
   .popup__close-button {
-    background-image: url(../../../images/close-icon-big.svg);
-    left: 438px;
-    bottom: 338px;
+    right: -40px;
+    top: -40px;
     height: 32px;
     width: 32px;
+    background-size: 32px;
   }
 }
