--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,11 +1,19 @@
 .profile__add-button {
+  background-image: url(../../../images/add-button.svg);
+  width: 282px;
+  height: 50px;
+  background-color: black;
+  border: none;
   margin: 0 auto 0;
+  cursor: pointer;
 }
 
 @media(min-width: 1024px) {
   .profile__add-button {
+    background-image: url(../../../images/Add-Button-mini.svg);
+    width: 150px;
     grid-column: 3;
-    grid-row: 1;
-    visibility: hidden;
+    grid-row: 1 / 3;
+    margin: 35px 0 0 40px;
   }
 }
