--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -4,7 +4,7 @@
   grid-template-rows: auto;
   width: 100%;
   max-width: 282px;
-  margin: 0;
+  margin-bottom: 25px;
   font-family: Inter, Arial, sans-serif;
 }
 
