--- a/blocks/popup/__content/popup__content.css
+++ b/blocks/popup/__content/popup__content.css
@@ -1,5 +1,12 @@
 .popup__content {
+  position: relative;
   display: flex;
   flex-direction: column;
+  align-items: center;
   margin: 0 auto 0;
+  border-radius: 15px;
+  background-color: #fff;
+  min-width: 282px;
+  width: 80%;
+  max-width: 430px;
 }
