--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -7,6 +7,11 @@
   background-size: cover;
   margin: 7px 0 0 0px;
   cursor: pointer;
+  transition: opacity 0.2s linear;
+}
+
+.profile__edit-button:hover {
+  opacity: 60%;
 }
 
 @media(min-width: 1024px) {
