--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,24 +1,5 @@
 .elements {
-  display: grid;
-  max-width: 880px;
-  grid-template-columns: repeat(1, 100%);
-  grid-template-rows: auto;
-  gap: 17px;
-  width: calc(100% - 38px);
-  margin: 10px auto 0;
+  display: flex;
+  margin: 0;
   padding: 0;
-  font-family: Inter, Arial, sans-serif;
-}
-
-@media (min-width: 768px) {
-  .elements {
-    width: 100%;
-    grid-template-columns: repeat(2, auto);
-  }
-}
-
-@media (min-width: 1024px) {
-  .elements {
-    grid-template-columns: repeat(3, auto);
-  }
 }
