--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,12 +1,29 @@
 .profile__add-button {
-  background-image: url(../../../images/add-button.svg);
+  position: relative;
   width: 282px;
   height: 50px;
   background-color: black;
-  border: none;
+  border: 2px solid white;
   margin: 0 auto 0;
   cursor: pointer;
   transition: opacity 0.2s linear;
+}
+
+.profile__add-button::before {
+  position: absolute;
+  content: '';
+  height: 16px;
+  border: 1px solid #fff;
+  top: 13px;
+}
+
+.profile__add-button:after {
+  position: absolute;
+  content: '';
+  height: 16px;
+  border: 1px solid #fff;
+  transform: rotate(90deg);
+  top: 13px;
 }
 
 .profile__add-button:hover {
@@ -15,10 +32,18 @@
 
 @media(min-width: 1024px) {
   .profile__add-button {
-    background-image: url(../../../images/Add-Button-mini.svg);
     width: 150px;
     grid-column: 3;
     grid-row: 1 / 3;
     margin: 35px 0 0 40px;
+  }
+
+  .profile__add-button::before {
+    height: 22px;
+    top: 12px;
+  }
+
+  .profile__add-button:after {
+    height: 22px;
   }
 }
