--- a/blocks/element/__trash/element__trash.css
+++ b/blocks/element/__trash/element__trash.css
@@ -1,15 +1,19 @@
 .element__trash {
-  /* position: relative;
-  top: 100px;
-  right: 10px;
-  left: 100px;
-  bottom: 10px; */
+  position: absolute;
   background-image: url(../../../images/trash.svg);
+  top: 20px;
+  right: 20px;
   border: none;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0);
   width: 18px;
   height: 19px;
-  margin: auto 20px auto 0;
+  margin: 0;
+  padding: 0;
   transition: opacity 0.1s linear;
   cursor: pointer;
+  z-index: 100;
+}
+
+.element__trash:hover {
+  opacity: 60%;
 }
