--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -13,6 +13,6 @@
   opacity: 50%;
 }
 
-.element__like:active {
+/* .element__like:active {
   background-image: url(../../../images/like-black.svg);
-}
+} */
