--- a/pages/index.css
+++ b/pages/index.css
@@ -16,6 +16,7 @@
 @import url(../blocks/element/__image-container/element__image-container.css);
 @import url(../blocks/element/__image/element__image.css);
 @import url(../blocks/element/__like/element__like.css);
+@import url(../blocks/element/__like/_status/element__like_status_active.css);
 @import url(../blocks/element/__trash/element__trash.css);
 @import url(../blocks/element/__title/element__title.css);
 @import url(../blocks/element/__bottom-block/element__bottom-block.css);
