--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,5 +1,4 @@
 .popup {
-  display: none;
   justify-content: center;
   align-items: center;
   background: rgba(0, 0, 0, 0.5);
@@ -11,4 +10,8 @@
   bottom: 0;
   color: #000;
   font-family: Inter, Arial, sans-serif;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s,
+    opacity 0.2s linear;
 }
