--- a/blocks/popup/__input/popup_input.css
+++ b/blocks/popup/__input/popup_input.css
@@ -2,13 +2,11 @@
   font-size: 14px;
   line-height: 16.94px;
   border-style: none;
-  margin-bottom: 14px;
-  padding-bottom: 9px;
-  padding-top: 16px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   width: 100%;
+  height: 47px;
 }
 
-.popup__input:last-of-type {
+/* .popup__input:last-of-type {
   margin-bottom: 2px;
-}
+} */
