--- a/pages/index.css
+++ b/pages/index.css
@@ -33,3 +33,5 @@
 @import url(../blocks/popup/__image/popup__image.css);
 @import url(../blocks/popup/__image-content/popup__image-content.css);
 @import url(../blocks/popup/__image-title/popup__image-title.css);
+@import url(../blocks/popup/__error/popup__error.css);
+@import url(../blocks/popup/__error/_state/popup__error_state_visible.css);
