--- a/blocks/popup/__input/popup_input.css
+++ b/blocks/popup/__input/popup_input.css
@@ -7,6 +7,6 @@
   height: 47px;
 }
 
-/* .popup__input:last-of-type {
-  margin-bottom: 2px;
-} */
+.popup__input:invalid {
+  border-bottom: 1px solid red;
+}
